app5PasswordStorageAndVerification/microservice5/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app5-microservice5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app5-microservice5
  template:
    metadata:
      labels:
        app: app5-microservice5
    spec:
      containers:
      - name: app5-microservice5
        image: b0rkemborina/zta-cybersec-suite:app5microservice5
        ports:
        - containerPort: 8044
