app5PasswordStorageAndVerification/microservice5/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app5-microservice5
spec:
  selector:
    app: app5-microservice5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8044
  type: ClusterIP
